tests/fixtures/invalid/pow_bytes_dict_none.py
# Cannot call pow() with Bytes, Dict[str, int], None
x = pow(b"hello", {"a": 1}, None)
